--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,24 @@ authors = ["Sam <sammeehansam@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = ">3.9.7,<3.13"
 django = "^3.2"
 whitenoise = {version = "5.2.0", extras = ["brotli"]}
 gunicorn = "^21.2.0"
+scrapetube = "^2.5.1"
+pytube = "^15.0.0"
+moviepy = "^1.0.3"
+tqdm = "^4.66.1"
+pydub = "^0.25.1"
+pandas = "^2.2.0"
+python-dotenv = "^1.0.1"
+langchain = "^0.1.4"
+cohere = "^4.45"
+pinecone-client = "^3.0.2"
+langchain-community = "^0.0.16"
+openai = "^1.10.0"
+tiktoken = "^0.5.2"
+langchain-openai = "^0.0.5"
 
 [build-system]
 requires = ["poetry-core"]
